syntax = "proto3";

import "rpc.proto";

package proxy;
option go_package = "pb";

message RsmcPaymentRequest{
  string channel_id = 1;
  double amount = 2;
  RecipientNodeInfo recipientInfo = 3;
}

message RsmcPaymentResponse{
  string channel_id = 1;
  double amount_a = 2;
  double amount_b = 3;
}

message LatestRsmcTxRequest{
  string channel_id = 1;
}

message RsmcTxResponse{
  string channel_id = 1;
  double amount_a = 2;
  double amount_b = 3;
  string peer_a = 4;
  string peer_b = 5;
  int32 curr_state = 6;
  string tx_hash = 7;
  int32 tx_type = 8;
  string h = 9;
  string r = 10;
  double amount_htlc = 11;
}

message TxListRequest{
  string channel_id = 1;
  int32 page_size = 2;
  int32 page_index = 3;
}
message TxListResponse{
  repeated RsmcTxResponse list = 1;
  int32 total_count = 2;
  int32 page_size = 3;
  int32 page_index = 4;
}

service Rsmc{
  rpc RsmcPayment(RsmcPaymentRequest) returns(RsmcPaymentResponse);
  rpc LatestRsmcTx(LatestRsmcTxRequest) returns(RsmcTxResponse);
  rpc TxListByChannelId(TxListRequest) returns(TxListResponse);
}